# nexus-memory

./: .gitignore  LICENSE  README.md  glama.json  nexus_engine.py  nexus_mcp.py  nexus_mcp_sse.py  nexus_monitor.py  nexus_rest.py  pyproject.toml  smithery.yaml
.well-known/mcp/: server-card.json
docs/: installation.md  marketplace.md  pricing.md
