[project]
name = "nexus-memory"
version = "2.0.0"
description = "Zero-dependency persistent memory for AI agents — MCP + REST API + CLI"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nexus Memory System"},
]
keywords = ["mcp", "memory", "ai-agents", "hindsight", "persistent-storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/Y-Sky-bro/nexus-memory"
"Documentation" = "https://github.com/Y-Sky-bro/nexus-memory#readme"

[project.scripts]
nexus-mcp = "nexus_mcp:main"
nexus-rest = "nexus_rest:run_server"
nexus-engine = "nexus_engine:main"
